--- a/devel/llvm-devel/Makefile
+++ b/devel/llvm-devel/Makefile
@@ -106,7 +106,7 @@ LLD_DESC=		Install lld, the LLVM linker
 LLD_GH_PROJECT=		lld:lld
 LLD_GH_SUBDIR=		tools/lld:lld
 LLD_GH_TAGNAME=		${LLD_COMMIT}:lld
-LLDB_BUILD_DEPENDS=	swig3.0:devel/swig30
+LLDB_BUILD_DEPENDS=	swig:devel/swig
 LLDB_EXTRA_PATCHES=	${PATCHDIR}/lldb
 LLDB_DESC=		Install lldb, the LLVM debugger
 LLDB_GH_PROJECT=	lldb:lldb
