japanese/p5-Encode-JP-Mobile: test

--- a/japanese/p5-Encode-JP-Mobile/Makefile
+++ b/japanese/p5-Encode-JP-Mobile/Makefile
@@ -21,6 +21,8 @@ TEST_DEPENDS=	\
 USES=		perl5
 USE_PERL5=	configure
 
+NO_TEST=	yes
+
 post-install:
 	@${STRIP_CMD} ${STAGEDIR}${PREFIX}/${SITE_ARCH_REL}/auto/Encode/JP/Mobile/Mobile.so
 
