add rubygem-binding_of_caller and rubygem-debug_inspector

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1717,12 +1717,14 @@ SUBDIR += rubygem-activejob4
 SUBDIR += rubygem-activesupport4
 SUBDIR += rubygem-activesupport5
 SUBDIR += rubygem-ast
+SUBDIR += rubygem-binding_of_caller
 SUBDIR += rubygem-builder
 SUBDIR += rubygem-cairo-gobject
 SUBDIR += rubygem-concurrent-ruby
 SUBDIR += rubygem-cool.io
 SUBDIR += rubygem-csv
 SUBDIR += rubygem-date
+SUBDIR += rubygem-debug_inspector
 SUBDIR += rubygem-drb
 SUBDIR += rubygem-ffi
 SUBDIR += rubygem-fiddle
