japanese/cmigemo: fix

--- a/japanese/cmigemo/Makefile
+++ b/japanese/cmigemo/Makefile
@@ -32,7 +32,7 @@ GH_TAGNAME=	6a1c438
 OPTIONS_DEFINE+=DOCS
 
 HAS_CONFIGURE=	yes
-CONFIGURE_ARGS=	--prefix=${STAGEDIR}${PREFIX}
+CONFIGURE_ARGS=	--prefix=${FAKE_DESTDIR}${TRUE_PREFIX}
 MAKE_JOBS_UNSAFE=	yes
 
 .include <bsd.mport.options.mk>
