--- a/x11-toolkits/Makefile
+++ b/x11-toolkits/Makefile
@@ -52,6 +52,7 @@ SUBDIR += libadwaita
 SUBDIR += libdazzle
 SUBDIR += libdecor
 SUBDIR += libXaw
+SUBDIR += libXaw3d
 SUBDIR += libXmu
 SUBDIR += libXt
 SUBDIR += libgdiplus
