devel/gobject-introspection: test off

--- a/devel/gobject-introspection/Makefile
+++ b/devel/gobject-introspection/Makefile
@@ -48,6 +48,7 @@ OPTIONS_DEFINE=	TEST
 
 TEST_MESON_ENABLED=	cairo
 TEST_LIB_DEPENDS=	libcairo.so:graphics/cairo
+NO_TEST=	yes
 
 .if ${FLAVOR:U} == bootstrap
 PKG_CONFIG_PATH=/usr/local/glib-bootstrap/libdata/pkgconfig
