--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1377,12 +1377,13 @@ SUBDIR += py-incremental
 SUBDIR += py-inflect
 SUBDIR += py-iniconfig
 SUBDIR += py-installer
+SUBDIR += py-intervaltree
+SUBDIR += py-invoke
 SUBDIR += py-ipaddr
 SUBDIR += py-iso8601
 SUBDIR += py-isodate
 SUBDIR += py-isort
-SUBDIR += py-intervaltree
-SUBDIR += py-invoke
+SUBDIR += py-itertree
 SUBDIR += py-lxml
 SUBDIR += py-magic
 SUBDIR += py-marshmallow
