--- a/databases/Makefile
+++ b/databases/Makefile
@@ -166,6 +166,7 @@ SUBDIR += py-aioredis
 SUBDIR += py-aiosqlite
 SUBDIR += py-alembic
 SUBDIR += py-apsw
+SUBDIR += py-asyncpg
 SUBDIR += py-berkeleydb
 SUBDIR += py-bsddb3
 SUBDIR += py-cassandra-driver
