graphics/libGLU: update

--- a/graphics/libGLU/Makefile
+++ b/graphics/libGLU/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	libGLU
-PORTVERSION=	9.0.2
+PORTVERSION=	9.0.3
 CATEGORIES=	graphics
 MASTER_SITES=	ftp://ftp.freedesktop.org/pub/mesa/glu/ \
 		https://mesa.freedesktop.org/archive/glu/
@@ -7,6 +7,7 @@ DISTNAME=	glu-${PORTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	OpenGL utility library
+WWW=		https://gitlab.freedesktop.org/mesa/glu
 
 LICENSE=	mit
 
