devel/glibmm26: magus test

--- a/devel/glibmm26/Makefile
+++ b/devel/glibmm26/Makefile
@@ -23,4 +23,6 @@ MESON_ARGS=	-Dbuild-documentation=false
 PORTSCOUT=	limitw:1,even
 PLIST_SUB=	VERSION=2.68
 
+NO_TEST=	yes
+
 .include <bsd.port.mk>
