--- a/graphics/sdl_image/Makefile
+++ b/graphics/sdl_image/Makefile
@@ -1,23 +1,25 @@
 PORTNAME=	sdl_image
 PORTVERSION=	1.2.12
-PORTREVISION=	3
+PORTREVISION=	4
 CATEGORIES=	graphics
 MASTER_SITES=	https://www.libsdl.org/projects/SDL_image/release/
 DISTNAME=	SDL_image-${PORTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Simple library to load images of various formats as SDL surfaces
+WWW=		https://www.libsdl.org/projects/SDL_image/
 
-LICENSE=	lgpl
+LICENSE=	lgpl2.1
 LICENSE_FILE=	${WRKSRC}/COPYING
 
-USES=		gmake libtool localbase pkgconfig pathfix sdl
+USES=		cpe gmake libtool localbase pkgconfig pathfix sdl
 USE_SDL=	sdl
 GNU_CONFIGURE=	yes
 CONFIGURE_ARGS=	--disable-jpg-shared --disable-png-shared \
 		--disable-tif-shared --disable-webp-shared
 INSTALL_TARGET=	install-strip
 USE_LDCONFIG=	yes
+CPE_VENDOR=	libsdl
 
 OPTIONS_DEFINE=	JPEG PNG TIFF WEBP
 OPTIONS_DEFAULT=JPEG PNG TIFF WEBP
