--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -10,6 +10,8 @@ SUBDIR += Hermes
 SUBDIR += ImageMagick6
 SUBDIR += ImageMagick7
 SUBDIR += R-cran-ggplot2
+SUBDIR += R-cran-gridBase
+SUBDIR += R-cran-gridExtra
 SUBDIR += R-cran-jpeg
 SUBDIR += R-cran-magick
 SUBDIR += R-cran-png
