--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -4,6 +4,8 @@ SUBDIR += R-cran-GDD
 SUBDIR += R-cran-colorspace
 SUBDIR += R-cran-latticeExtra
 SUBDIR += R-cran-pixmap
+SUBDIR += R-cran-viridis
+SUBDIR += R-cran-viridisLite
 SUBDIR += R-cran-visNetwork
 SUBDIR += GraphicsMagick
 SUBDIR += Hermes
