--- a/devel/Makefile
+++ b/devel/Makefile
@@ -5,6 +5,7 @@ SUBDIR += R-cran-BH
 SUBDIR += R-cran-Defaults
 SUBDIR += R-cran-Hmisc
 SUBDIR += R-cran-R6
+SUBDIR += R-cran-R.cache
 SUBDIR += R-cran-R.methodsS3
 SUBDIR += R-cran-R.oo
 SUBDIR += R-cran-R.utils
