--- a/mail/xmailwatcher/Makefile
+++ b/mail/xmailwatcher/Makefile
@@ -9,7 +9,7 @@ COMMENT=	Mailbox checker which displays sender and subject lines of mails
 
 LICENSE=	mit
 
-PLIST_FILES=	bin/xmailwatcher man/man1/xmailwatcher.1.gz
+PLIST_FILES=	bin/xmailwatcher share/man/man1/xmailwatcher.1.gz
 USES=		imake xorg
 USE_XORG=	ice sm x11 xaw xext xmu xpm xt
 
