--- a/net/netcat/Makefile
+++ b/net/netcat/Makefile
@@ -1,12 +1,13 @@
 PORTNAME=	netcat
 PORTVERSION=	1.10
-PORTREVISION=	3
+PORTREVISION=	4
 CATEGORIES=	net
-MASTER_SITES=	SF/${DISTNAME}/unix%20netcat%20${PORTVERSION}%20by%20_Hobbit_/%5BUnnamed%20release%5D
+MASTER_SITES=	FREEBSD_LOCAL/cy \
+		https://cschubert.com/distfiles/
+		
 DISTNAME=	nc${PORTVERSION:S/.//}
 
-#PATCH_SITES=	ftp://sith.mimuw.edu.pl/pub/users/baggins/IPv6/
-PATCH_SITES=	GENTOO
+PATCH_SITES=	${MASTER_SITES}
 PATCHFILES=	nc-v6-20000918.patch.gz
 PATCH_DIST_STRIP=	-p1
 
@@ -21,7 +22,7 @@ USES=		tar:tgz
 NO_WRKSUBDIR=	yes
 ALL_TARGET=	freebsd
 
-CFLAGS+=	-DFREEBSD
+CFLAGS+=	-DFREEBSD -Wno-int-conversion
 LDFLAGS+=	-static
 
 PORTDOCS=	README
