--- a/math/Makefile
+++ b/math/Makefile
@@ -8,12 +8,15 @@ SUBDIR += R-cran-backports
 SUBDIR += R-cran-date
 SUBDIR += R-cran-dplyr
 SUBDIR += R-cran-forcats
+SUBDIR += R-cran-gtable
 SUBDIR += R-cran-haven
+SUBDIR += R-cran-isoband
 SUBDIR += R-cran-lazyeval
 SUBDIR += R-cran-maps
 SUBDIR += R-cran-mathjaxr
 SUBDIR += R-cran-sets
 SUBDIR += R-cran-sf
+SUBDIR += R-cran-units
 SUBDIR += adol-c
 SUBDIR += analitza
 SUBDIR += asl
