x11-drivers/xf86-video-geode: 2.18.2

--- a/x11-drivers/xf86-video-geode/Makefile
+++ b/x11-drivers/xf86-video-geode/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	xf86-video-geode
-PORTVERSION=	2.11.20
-PORTREVISION=	2
+PORTVERSION=	2.18.2
+PORTREVISION=	0
 CATEGORIES=	x11-drivers
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -10,7 +10,7 @@ WWW=		https://www.x.org/
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/COPYING
 
-USES=		xorg-cat:driver
+USES=		tar:xz xorg-cat:driver
 
 ONLY_FOR_ARCHS=	i386
 ONLY_FOR_ARCHS_REASON=	Geode processors are 32bit x86 only
