lang/Makefile: dd ientry

--- a/lang/Makefile
+++ b/lang/Makefile
@@ -117,6 +117,7 @@ SUBDIR += ruby32
 SUBDIR += rust
 SUBDIR += rust-bin
 SUBDIR += rust-bootstrap
+SUBDIR += rust186
 SUBDIR += scala
 SUBDIR += spidermonkey78
 SUBDIR += spidermonkey91
