--- a/devel/Makefile
+++ b/devel/Makefile
@@ -43,6 +43,7 @@ SUBDIR += R-cran-generics
 SUBDIR += R-cran-gert
 SUBDIR += R-cran-globals
 SUBDIR += R-cran-glue
+SUBDIR += R-cran-googledrive
 SUBDIR += R-cran-googlesheets4
 SUBDIR += R-cran-gsubfn
 SUBDIR += R-cran-hms
