textproc/Makefile: fix index

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -19,7 +19,7 @@ SUBDIR += R-cran-markdown
 SUBDIR += R-cran-openxlsx
 SUBDIR += R-cran-pystr
 SUBDIR += R-cran-rbibutils
-SUBDIR += R-cran-readrA
+SUBDIR += R-cran-readr
 SUBDIR += R-cran-readxl
 SUBDIR += R-cran-rematch
 SUBDIR += R-cran-reprex
