x11/Makefile: add rofi

--- a/x11/Makefile
+++ b/x11/Makefile
@@ -168,6 +168,7 @@ SUBDIR += qimageblitz
 SUBDIR += qt5-qev
 SUBDIR += qt5-x11extras
 SUBDIR += rgb
+SUBDIR += rofi
 SUBDIR += runner
 SUBDIR += rxvt-unicode
 SUBDIR += scripts
