www/Makefile: node 23

--- a/www/Makefile
+++ b/www/Makefile
@@ -123,6 +123,7 @@ SUBDIR += node
 SUBDIR += node18
 SUBDIR += node20
 SUBDIR += node22
+SUBDIR += node23
 SUBDIR += otter-browser
 SUBDIR += p5-Apache-LogFormat-Compiler
 SUBDIR += p5-CGI-Ajax
