--- a/devel/Makefile
+++ b/devel/Makefile
@@ -58,6 +58,7 @@ SUBDIR += R-cran-magrittr
 SUBDIR += R-cran-memoise
 SUBDIR += R-cran-mockery
 SUBDIR += R-cran-mockr
+SUBDIR += R-cran-modelr
 SUBDIR += R-cran-pak
 SUBDIR += R-cran-parallelly
 SUBDIR += R-cran-parsedate
