--- a/finance/Makefile
+++ b/finance/Makefile
@@ -1,5 +1,6 @@
 COMMENT = Monetary, financial and related applications
 
+SUBDIR += R-cran-lmtest
 SUBDIR += expense
 SUBDIR += libofx
 SUBDIR += prestashop
