audio/eawpats: fix fetch

--- a/audio/eawpats/Makefile
+++ b/audio/eawpats/Makefile
@@ -2,7 +2,7 @@ PORTNAME=	eawpats
 DISTVERSION=	12
 PORTREVISION=	4
 CATEGORIES=	audio
-MASTER_SITES=	LOCAL/fuz
+MASTER_SITES=	FREEBSD_LOCAL/fuz
 DISTNAME=	eawpats12_full
 
 MAINTAINER=	ports@MidnightBSD.org
