--- a/devel/Makefile
+++ b/devel/Makefile
@@ -56,6 +56,7 @@ SUBDIR += R-cran-listenv
 SUBDIR += R-cran-lubridate
 SUBDIR += R-cran-magrittr
 SUBDIR += R-cran-memoise
+SUBDIR += R-cran-microbenchmark
 SUBDIR += R-cran-mockery
 SUBDIR += R-cran-mockr
 SUBDIR += R-cran-modelr
