--- a/devel/Makefile
+++ b/devel/Makefile
@@ -63,6 +63,7 @@ SUBDIR += R-cran-modelr
 SUBDIR += R-cran-pak
 SUBDIR += R-cran-parallelly
 SUBDIR += R-cran-parsedate
+SUBDIR += R-cran-patrick
 SUBDIR += R-cran-pillar
 SUBDIR += R-cran-pkgbuild
 SUBDIR += R-cran-pkgconfig
