--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1511,6 +1511,7 @@ SUBDIR += py-pytest-env
 SUBDIR += py-pytest-flake8
 SUBDIR += py-pytest-forked
 SUBDIR += py-pytest-html
+SUBDIR += py-pytest-httpbin
 SUBDIR += py-pytest-httpserver
 SUBDIR += py-pytest-isort
 SUBDIR += py-pytest-lazy-fixture
