add py-gql and friends.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1194,6 +1194,7 @@ SUBDIR += py-Jinja2
 SUBDIR += py-QtPy
 SUBDIR += py-absl-py
 SUBDIR += py-aiobotocore
+SUBDIR += py-aiofiles
 SUBDIR += py-aioitertools
 SUBDIR += py-aiosignal
 SUBDIR += py-amalgamate
@@ -1227,6 +1228,7 @@ SUBDIR += py-awscli
 SUBDIR += py-awscrt
 SUBDIR += py-b2sdk
 SUBDIR += py-babel
+SUBDIR += py-backoff
 SUBDIR += py-backports
 SUBDIR += py-backports.tarfile
 SUBDIR += py-bcdoc
@@ -1327,6 +1329,7 @@ SUBDIR += py-gitdb
 SUBDIR += py-gitpython
 SUBDIR += py-google-i18n-address
 SUBDIR += py-googleapis-common-protos
+SUBDIR += py-gql
 SUBDIR += py-graphql-core
 SUBDIR += py-greenlet
 SUBDIR += py-grpcio
@@ -1504,6 +1507,7 @@ SUBDIR += py-pytest-black-multipy
 SUBDIR += py-pytest-cache
 SUBDIR += py-pytest-capturelog
 SUBDIR += py-pytest-checkdocs
+SUBDIR += py-pytest-console-scripts
 SUBDIR += py-pytest-cov
 SUBDIR += py-pytest-datadir
 SUBDIR += py-pytest-enabler
@@ -1643,6 +1647,7 @@ SUBDIR += py-unidiff
 SUBDIR += py-unittest2
 SUBDIR += py-usb
 SUBDIR += py-validators
+SUBDIR += py-vcrpy
 SUBDIR += py-versioneer
 SUBDIR += py-versioningit
 SUBDIR += py-virtualenv
