--- a/archivers/arj/Makefile
+++ b/archivers/arj/Makefile
@@ -31,7 +31,7 @@ PATCH_STRIP=	-p1
 PORTSCOUT=	skipv:3.10g
 
 GNU_CONFIGURE=	yes
-USES=		alias autoreconf gmake
+USES=		autoreconf gmake
 AUTORECONF_WRKSRC=	${WRKSRC}/gnu
 CONFIGURE_WRKSRC=	${WRKSRC}/gnu
 MAKEFILE=	GNUmakefile
@@ -60,7 +60,9 @@ post-patch:
 	@${REINPLACE_CMD} -e 's!/etc!${LOCALBASE}/etc!' \
 		 ${WRKSRC}/arj.c ${WRKSRC}/file_reg.c ${WRKSRC}/rearj.c
 	@${REINPLACE_CMD} -e 's!-O2!!' -e 's!ALIGN_POINTERS!&,1,desc!' \
-		-e 's!USE_COLORS!&,1,desc!' -e '/LD_STRIP=/d' ${WRKSRC}/gnu/configure.in
+		-e 's!USE_COLORS!&,1,desc!' -e '/LD_STRIP=/d' \
+		-e 's|-export-dynamic|-Wl,--export-dynamic|' \
+		${WRKSRC}/gnu/configure.in
 	@${REINPLACE_CMD} -e 's!^static !!' ${WRKSRC}/integr.c
 
 post-install:
