--- a/devel/9base/Makefile
+++ b/devel/9base/Makefile
@@ -12,7 +12,7 @@ WWW=		https://tools.suckless.org/9base
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-ONLY_FOR_ARCHS=		amd64 i386 powerpc powerpc64 powerpc64le sparc64
+ONLY_FOR_ARCHS=		amd64 i386
 ONLY_FOR_ARCHS_REASON=	has low-level code unavailable for ${ARCH}
 
 USES=		cpe shebangfix
