archivers/zopfli: force c99

--- a/archivers/zopfli/Makefile
+++ b/archivers/zopfli/Makefile
@@ -19,6 +19,7 @@ GH_ACCOUNT=	google
 ALL_TARGET=	libzopfli libzopfli.a libzopflipng libzopflipng.a zopfli zopflipng
 MAKE_JOBS_UNSAFE=	yes
 USE_LDCONFIG=	yes
+USE_CSTD=	c99
 
 PLIST_SUB=	PORTVERSION=${PORTVERSION}
 
