--- a/deskutils/xpostit/Makefile
+++ b/deskutils/xpostit/Makefile
@@ -1,17 +1,18 @@
 PORTNAME=	xpostit
 PORTVERSION=	3.3.1
-PORTREVISION=	3
+PORTREVISION=	4
 CATEGORIES=	deskutils
-MASTER_SITES=	ftp://ftp.x.org/R5contrib/
-DISTNAME=	${PORTNAME}${PORTVERSION}
+MASTER_SITES=	SF/${PORTNAME}/${PORTVERSION}
+# DISTNAME=	${PORTNAME}${PORTVERSION:S/.//g}
+DISTNAME=	${PORTNAME}_${PORTVERSION}.orig
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	PostIt (R) messages onto your X11 screen
 
 LICENSE=	unknown
 
-USES=		imake xorg tar:Z
+USES=		imake xorg
 USE_XORG=	ice sm x11 xaw xext xmu xpm xt
-WRKSRC=		${WRKDIR}/xpostit
+WRKSRC=		${WRKDIR}/${PORTNAME}-${PORTVERSION}.orig
 
 .include <bsd.port.mk>
