--- a/x11/yad/Makefile
+++ b/x11/yad/Makefile
@@ -1,11 +1,11 @@
 PORTNAME=	yad
-PORTVERSION=	6.0
+PORTVERSION=	14.1
 DISTVERSIONPREFIX=	v
-PORTREVISION=	1
 CATEGORIES=	x11 gnome
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Display GNOME dialogs from the command line
+WWW=		https://github.com/v1cont/yad
 
 LICENSE=	gpl3
 
@@ -26,23 +26,21 @@ GLIB_SCHEMAS=	yad.gschema.xml
 USE_GITHUB=	yes
 GH_ACCOUNT=	v1cont
 
-OPTIONS_DEFINE=	HTML ICONBROWSER NLS PFD GTKSOURCEVIEW SPELL
+OPTIONS_DEFINE=	HTML ICONBROWSER NLS GTKSOURCEVIEW SPELL TOOLS
 HTML_DESC=		Build with HTML widget
 ICONBROWSER_DESC=	Build YAD icon browser
-PFD_DESC=		Build PFD fontnames transformation utility
 GTKSOURCEVIEW_DESC=	Build with GtkSourceView support
 SPELL_DESC=		Build with Spell check support
+TOOLS_DESC=		Build with yad-tools utility
 OPTIONS_DEFAULT=	SPELL
 OPTIONS_SUB=	yes
 
 HTML_CONFIGURE_ENABLE=	html
-HTML_LIB_DEPENDS=	libwebkit2gtk-4.0.so:www/webkit2-gtk3 \
+HTML_LIB_DEPENDS=	libwebkit2gtk-4.0.so:www/webkit2-gtk@40 \
 			libsoup-2.4.so:devel/libsoup \
-			libjavascriptcoregtk-4.0.so:www/webkit2-gtk3
+			libjavascriptcoregtk-4.0.so:www/webkit2-gtk@40
 
 ICONBROWSER_CONFIGURE_ENABLE=	icon-browser
-
-PFD_CONFIGURE_ENABLE=	pfd
 
 GTKSOURCEVIEW_CONFIGURE_ENABLE=	sourceview
 GTKSOURCEVIEW_USE=	GNOME=gtksourceview3
@@ -50,5 +48,7 @@ GTKSOURCEVIEW_USE=	GNOME=gtksourceview3
 SPELL_CONFIGURE_ENABLE=	spell
 SPELL_LIB_DEPENDS=	libgspell-1.so:textproc/gspell \
 			libenchant-2.so:textproc/enchant2
+
+TOOLS_CONFIGURE_ENABLE=	tools
 
 .include <bsd.port.mk>
