--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1379,6 +1379,7 @@ SUBDIR += py-lazr.delegates
 SUBDIR += py-lazr.restfulclient
 SUBDIR += py-lazr.uri
 SUBDIR += py-lazy-object-proxy
+SUBDIR += py-libevdev
 SUBDIR += py-libpeas
 SUBDIR += py-libvirt
 SUBDIR += py-linecache2
